test/cases/errorcheck/undefined_variable.cot
// errorcheck
// Tests that undefined variables produce clear error messages.
fn main() {
    let x = undefined_var; // ERROR "undefined"
}
